<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="application_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_mode">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="share">Поделиться</string>
    <string name="topic_support">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="user_agreement_url" translatable="false">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="course_url" translatable="false">https://practicum.yandex.ru/profile/android-developer-plus/</string>
    <string name="student_url" translatable="false">home143baza@yandex.ru</string>

    <string name="accessibility_clear">Очистить поисковый запрос</string>
    <string name="accessibility_back">Вернуться назад</string>
    <string name="accessibility_track_cover">Обложка музыкального трека</string>
    <string name="empty_placeholder">Ничего не нашлось</string>
    <string name="error_placeholder">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="search_history_title">Вы искали</string>
</resources>